<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_background">

    <ImageView
        android:id="@+id/miLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/esolanegra"
        android:contentDescription="@string/descripci_n_de_la_imagen"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/miLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:onClick="login"
        android:text="@string/login"
        android:textSize="23dp"
        android:textColor="#a22fa1"
        android:background="@drawable/background_button_white"
        android:drawableLeft="@drawable/baseline_person_24"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="register"
        android:text="@string/register"
        android:textSize="23dp"
        android:textColor="#a22fa1"
        android:background="@drawable/background_button_white"
        android:drawableLeft="@drawable/baseline_person_add_24"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="entrenador"
        android:text="@string/modo_entrenador"
        android:textSize="23dp"
        android:textColor="#a22fa1"
        android:background="@drawable/background_button_white"/>
</RelativeLayout>
